--- a/src/App.css
+++ b/src/App.css
@@ -903,7 +903,7 @@ header .scrolldown a:hover {
 }
 
 .opaque {
-  background-color: #333;
+  background-color: #000;
 }
 
 #nav-wrap > a.mobile-btn {
@@ -2170,7 +2170,7 @@ img.mfp-img {
  -------------------------------------------------------------------- */
  #nav-wrap {
     font: 12px 'opensans-bold', sans-serif;
-    background: transparent !important;
+    /* background: transparent !important; */
     letter-spacing: 1.5px;  
     width: auto;
     position: fixed;
@@ -2229,7 +2229,7 @@ img.mfp-img {
 #nav-wrap:target > ul#nav	{
    display: block;
     padding: 30px 20px 48px 20px;
-    background: #1f2024;
+    background: #000;
     margin: 0 30px;
     clear: both;
  }
