--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -44,7 +44,7 @@
   background: #444;
 }
 #about .download .button:hover {
-  background: #fff;
+  background: #11abb0;
   color: #2b2b2b;
 }
 #about .download .button i {
